Bug 515610 - Make defer and async work with the speculating HTML5 parser. r=bnewman.