parser/html/nsHtml5TreeBuilderHSupplement.h
@@ -45,6 +45,7 @@
     PRInt32                                mHandlesUsed;
     nsTArray<nsAutoArrayPtr<nsIContent*> > mOldHandles;
     nsRefPtr<nsHtml5SpeculativeLoader>     mSpeculativeLoader;
+    PRBool                                 mCurrentHtmlScriptIsAsyncOrDefer;
 #ifdef DEBUG
     PRBool                                 mActive;
 #endif
